--- a/glibc/Makefile
+++ b/glibc/Makefile
@@ -1,11 +1,12 @@
 FLAGS = 
 
-TARGETS = sort
+TARGETS = sort memmove
 
 .PHONY: all
 all: $(TARGETS)
 
 sort: sort.c
+memmove: memmove.c
 	$(CC) $^ $(FLAGS) -o $@
 
 .PHONY: clean
