--- a/glibc/Makefile
+++ b/glibc/Makefile
@@ -1,12 +1,13 @@
 FLAGS = 
 
-TARGETS = sort memmove
+TARGETS = sort memmove hashmap
 
 .PHONY: all
 all: $(TARGETS)
 
 sort: sort.c
 memmove: memmove.c
+hashmap: hashmap.c
 	$(CC) $^ $(FLAGS) -o $@
 
 .PHONY: clean
